--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mux/mux-player-react": "^3.2.4",
     "@mux/mux-video-react": "^0.24.2",
     "@sanity/image-url": "1",
+    "lenis": "^1.1.20",
     "next": "15.1.5",
     "next-sanity": "9",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "3",
