--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.1.1",
     "sanity": "3",
     "sanity-plugin-mux-input": "^2.4.0",
     "styled-components": "6"
